feat(config): 更新文本渲染接口和配置项
- 在 README.md 中更新了 `/render/{user_id:str}` 接口的参数列表，增加了 `timeout` 参数
- 将 `WKHTMLTOPDF_PATH` 配置项重命名为 `WKHTMLTOIMAGE_PATH`，并更新了相应的路径
- 在 run_fastapi.py 中调整了 `render` 函数的 `timeout` 参数类型，从 int 改为 float

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -54,17 +54,17 @@
         ]
     },
     {
-        "name": "WKHTMLTOPDF_PATH",
+        "name": "WKHTMLTOIMAGE_PATH",
         "values": [
             {
                 "type": "path",
                 "system": "Windows",
-                "value": "C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"
+                "value": "C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe"
             },
             {
                 "type": "path",
                 "system": "Linux",
-                "value": "/usr/local/bin/wkhtmltopdf"
+                "value": "/usr/local/bin/wkhtmltoimage"
             }
         ]
     },
