feat(API): 更新文本渲染功能并添加样式获取接口
- 移除 _render_api.py 中的 MARKDOWN_STYLES 导入，改为使用 get_style_names 函数
- 添加 /render_styles 接口，用于获取所有可用的渲染样式
- 更新 README.md，添加新的暗色系样式说明
- 在 project_config.json 中添加 RENDER_STYLES_DIR 配置项，用于指定样式目录路径

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -27,6 +27,15 @@
         ]
     },
     {
+        "name": "RENDER_STYLES_DIR",
+        "values": [
+            {
+                "type": "path",
+                "value": "./styles"
+            }
+        ]
+    },
+    {
         "name": "STATIC_DIR",
         "values": [
             {
