refactor: 重命名文件夹并更新项目配置
- 将 PresetsPrompt 文件夹重命名为 Prompt/Presets
- 更新 config/project_config.json 中的相关路径

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -175,7 +175,7 @@
         "values": [
             {
                 "type": "str",
-                "value": "./PresetsPrompt"
+                "value": "./Prompt/Presets"
             }
         ]
     },
