feat(core): 增加黑名单功能
- 在 project_config.json 中添加 REASON_PROMPT_DIR 配置项
- 实现 get_blacklist 方法读取黑名单文件
- 在 Chat 方法中增加黑名单用户判断逻辑
- 黑名单中的用户将无法使用 chatbot 功能

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -180,6 +180,15 @@
         ]
     },
     {
+        "name": "REASON_PROMPT_DIR",
+        "values": [
+            {
+                "type": "str",
+                "value": "./Prompt/Reason"
+            }
+        ]
+    },
+    {
         "name": "PARSET_PROMPT_NAME",
         "values": [
             {
