feat(config): 更新系统路径配置支持全平台匹配
将 project_config.json 中的系统路径配置从仅支持 Linux 系统
更改为支持所有系统平台，使用 "*" 通配符替代具体的 "Linux" 指定

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -114,7 +114,7 @@
             },
             {
                 "type": "path",
-                "system": "Linux",
+                "system": "*",
                 "value": "/usr/local/bin/wkhtmltoimage"
             }
         ]
