fix(config): 更新机器人出生日期配置项命名规范，并为模型默认最大令牌数配置添加类型定义
将 BOT_INFO.BIRTHDAY_YEAR、BOT_INFO.BIRTHDAY_MONTH 和 BOT_INFO.BIRTHDAY_DAY
配置项名称分别修改为 BOT_INFO.BIRTHDAY.YEAR、BOT_INFO.BIRTHDAY.MONTH 和
BOT_INFO.BIRTHDAY.DAY，以符合嵌套配置项的命名约定。

为 MODEL.DEFAULT_MAX_TOKENS 和 MODEL.DEFAULT_MAX_COMPLETION_TOKENS 配置项
添加缺失的 "type": "int" 类型定义，确保配置项类型明确。

--- a/config/project_config.json
+++ b/config/project_config.json
@@ -118,7 +118,7 @@
         ]
     },
     {
-        "name": "BOT_INFO.BIRTHDAY_YEAR",
+        "name": "BOT_INFO.BIRTHDAY.YEAR",
         "values": [
             {
                 "type": "int",
@@ -127,7 +127,7 @@
         ]
     },
     {
-        "name": "BOT_INFO.BIRTHDAY_MONTH",
+        "name": "BOT_INFO.BIRTHDAY.MONTH",
         "values": [
             {
                 "type": "int",
@@ -136,7 +136,7 @@
         ]
     },
     {
-        "name": "BOT_INFO.BIRTHDAY_DAY",
+        "name": "BOT_INFO.BIRTHDAY.DAY",
         "values": [
             {
                 "type": "int",
@@ -370,6 +370,7 @@
         "name": "MODEL.DEFAULT_MAX_TOKENS",
         "values": [
             {
+                "type": "int",
                 "value": 4096
             }
         ]
@@ -378,6 +379,7 @@
         "name": "MODEL.DEFAULT_MAX_COMPLETION_TOKENS",
         "values": [
             {
+                "type": "int",
                 "value": 4096
             }
         ]
