refactor(config): 重构配置文件结构并更新时区设置
移除 bot_info 和 core.version 配置项。将 time.time_offset 配置统一为 timezone 并设置为 Asia/Shanghai。
调整 to_image 模块的 browser_type 默认值为空字符串。修改 html_template 相关配置，
包括默认模板名称及后缀分离，并清空 preprocess_map.after 映射规则。

--- a/configs/project_configs/config.json
+++ b/configs/project_configs/config.json
@@ -8,22 +8,11 @@
         "file_path": "./configs/blacklist.regex",
         "match_timeout": 10.0
     },
-    "bot_info": {
-        "name": "Repeater",
-        "birthday": {
-            "day": 28,
-            "month": 6,
-            "year": 2024
-        }
-    },
     "callapi": {
         "max_concurrency": 1000
     },
     "context": {
         "auto_shrink_length": null
-    },
-    "core": {
-        "version": ""
     },
     "logger": {
         "file_path": "./logs/repeater-log-{time:YYYY-MM-DD_HH-mm-ss.SSS}.log",
@@ -51,7 +40,7 @@
             "year": 2024
         },
         "time": {
-            "time_offset": 0.0
+            "timezone": "Asia/Shanghai"
         }
     },
     "prompt": {
@@ -68,20 +57,18 @@
             "style_file_encoding": "utf-8",
             "html_template_dir": "./configs/html_templates",
             "html_template_file_encoding": "utf-8",
-            "default_html_template": "default.html",
+            "default_html_template": "default",
+            "html_template_suffix": ".html",
             "preprocess_map": {
                 "before": {},
-                "after": {
-                    "<code>": "<pre><code>",
-                    "</code>": "</code></pre>"
-                }
+                "after": {}
             },
             "title": "Repeater Image Generator"
         },
         "to_image": {
             "max_pages_per_browser": 5,
             "max_browsers": 2,
-            "browser_type": "chrome",
+            "browser_type": "",
             "headless": true,
             "output_dir": "./workspace/temp/render",
             "output_suffix": ".png",
@@ -105,9 +92,6 @@
     "static": {
         "readme_file_path": "./README.md",
         "static_dir": "./static"
-    },
-    "time": {
-        "time_offset": 0.0
     },
     "user_config_cache": {
         "downgrade_wait_time": 600.0,
