feat: 添加新的依赖包并更新依赖配置
- 在requirements.txt中添加numpy==2.3.4和tzdata==2025.2
- 更新run.json配置文件，添加tzdata依赖的配置信息
- 确保依赖配置正确

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ uvicorn==0.34.3
 markdown==3.8.2
 playwright==1.56.0
 httpx==0.28.1
+numpy==2.3.4
 pyyaml==6.0.2
 python-box==7.3.2
+tzdata==2025.2
